<package>
  <name>etasl_solver_qpoases</name>
  <version>1.0.0</version>
  <description>This package for a component to create a qpoases solver in an etasl-rtt component</description>
  <maintainer email="Erwin.Aertbelien@kuleuven.be">Erwin Aertbelien</maintainer>

  <license>GNU LGPL v3</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Erwin Aertbelien</author>

  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>etasl_rtt</build_depend>
  <run_depend>etasl_rtt</run_depend>
  <build_depend>expressiongraph_context</build_depend>
  <run_depend>expressiongraph_context</run_depend>
  <build_depend>expressiongraph_context_lua</build_depend>
  <run_depend>expressiongraph_context_lua</run_depend>
  <build_depend>expressiongraph_solver_qpoases</build_depend>
  <run_depend>expressiongraph_solver_qpoases</run_depend>
  <run_depend>rtt</run_depend>

  <export>

  </export>
</package>
